--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "quill": "^1.1.7",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-quill": "https://github.com/zenoamaro/react-quill.git",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
